infrastructure/cert-manager/acme-challenge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-challenge
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: srv836417.hstgr.cloud
      http:
        paths:
          - path: /.well-known/acme-challenge/
            pathType: ImplementationSpecific
            backend:
              service:
                name: cert-manager
                port:
                  number: 8080
